# Telegram_Bot_auto_send_images

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/app/: schedule.py
src/configuration/: apiconfig.py  celeryconfig.py  scheduleconfig.py  teleconfig.py
src/libs/: decorators.py
src/libs/client/: telegram.py  unsplash.py
src/logic/: unsplash_image.py
